--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-m-g.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-m-g.html
@@ -1,7 +1,7 @@
 <div class="contain">
     <div class="split">
         <div style="text-align: center; font-size: 21pt; margin-bottom: 21pt;"><strong>{{ counter_obj.get_counter_name_display }}</strong></div>
-        <p style="text-indent: 0pt">致：成都武侯中小企业融资担保有限责任公司</p>
+        <p style="text-indent: 0pt">致：{{ UN }}</p>
         <div>{% include 'dbms/agree/agree_board/counter/g/max/g-0-m-pre.html' %}</div>
         <p>一、{% include 'dbms/agree/agree_board/counter/g/g-1.html' %}</p>
         <p>二、{% include 'dbms/agree/agree_board/counter/g/g-2.html' %}</p>
