审保会纪要调整

--- a/A_dbms/templates/dbms/agree/extra/js-agree-edit.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-edit.html
@@ -6,7 +6,6 @@
 
     function bindEditAgreeB() {
         $('#editAgreeB').click(function () {
-            console.log("bindAddAgree");
             $('#editAgreeModal').modal('show');
         })
     }
@@ -19,10 +18,10 @@
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
+            var other_g = $('#id_other').val();
+            postData['other'] = other_g;
+
             var postDataStr = JSON.stringify(postData);
-
-            console.log(postDataStr);
-
             $.ajax({
                 url: '/dbms/agree/edit/',
                 type: 'POST',
