--- a/A_dbms/templates/dbms/agree/extra/js-agree-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-add.html
@@ -14,7 +14,6 @@
 
     function bind_id_agree_typ() {
         $('#id_agree_typ').change(function () {
-            console.log("bind_id_agree_typ");
             $('.agree-extend').hide();
             var selected_agree_typ = $('#id_agree_typ').val();
             switch (selected_agree_typ) {
@@ -36,10 +35,10 @@
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
+            var other_g = $('#id_other').val();
+            postData['other'] = other_g;
+
             var postDataStr = JSON.stringify(postData);
-
-            console.log(postDataStr);
-
             $.ajax({
                 url: '/dbms/agree/add/',
                 type: 'POST',
