--- a/A_dbms/templates/dbms/agree/modl/mod_form/agree-edit.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/agree-edit.html
@@ -39,6 +39,11 @@
         <div class="col-sm-9">{{ form_agree_edit.agree_copies }}</div>
         <label id="e_agree_copies" class="pull-right">{{ form_agree_edit.agree_copies.errors }}</label>
     </div>
+    <div class="form-group"><!--合同其他约定-->
+        <label for="id_other" class="col-sm-3 control-label">{{ form_agree_edit.other.label }}：</label>
+        <div class="col-sm-9">{{ form_agree_edit.other }}</div>
+        <label id="e_others" class="pull-right">{{ form_agree_edit.other.errors }}</label>
+    </div>
 </div>
 
 
