--- a/A_dbms/templates/dbms/article/modl/mod_form/article-agree-add.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/article-agree-add.html
@@ -39,6 +39,11 @@
         <div class="col-sm-9">{{ form_agree_add.agree_copies }}</div>
         <label id="e_agree_copies" class="pull-right">{{ form_agree_add.agree_copies.errors }}</label>
     </div>
+    <div class="form-group"><!--其他事项-->
+        <label for="id_others" class="col-sm-3 control-label">{{ form_agree_add.other.label }}：</label>
+        <div class="col-sm-9">{{ form_agree_add.other }}</div>
+        <label id="e_other" class="pull-right">{{ form_agree_add.other.errors }}</label>
+    </div>
 </div>
 
 
