--- a/A_dbms/templates/dbms/appraisal/appraisal-sign.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-sign.html
@@ -15,7 +15,7 @@
             <tr class="bb2">
                 <td style="padding-top: 6pt" width="67pt" valign="top"><b>主题：</b></td>
                 <td class="tbp" style="padding-top: 6pt; padding-bottom: 6pt">
-                    关于{{ article_obj.custom.name }}{{ amount_str }}万元担保融资项目的评审意见（审查意见书：{{ article_obj.summary_num }}）
+                    关于{{ article_obj.custom.name }}{{ amount_str }}万元担保项目的评审意见（审查意见书：{{ article_obj.summary_num }}）
                 </td>
             </tr>
             <tr class="bb2">
