--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/supply-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/supply-add.html
@@ -1,9 +1,9 @@
 <div id="form_supply">
 
     <div class="form-group"><!--补调问题-->
-        <label for="id_detail" class="col-sm-3 control-label">{{ form_supply.detail.label }}：</label>
-        <div class="col-sm-9">{{ form_supply.detail }}</div>
-        <label id="e_detail" class="pull-right">{{ form_supply.detail.errors }}</label>
+        <label for="id_supply_detail" class="col-sm-3 control-label">{{ form_supply.supply_detail.label }}：</label>
+        <div class="col-sm-9">{{ form_supply.supply_detail }}</div>
+        <label id="e_supply_detail" class="pull-right">{{ form_supply.supply_detail.errors }}</label>
     </div>
 
 </div>
