--- a/A_dbms/templates/dbms/appraisal/extra/js-supply-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-supply-add.html
@@ -19,7 +19,7 @@
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
-            postData['detail'] = $('#id_detail').val();
+            postData['supply_detail'] = $('#id_supply_detail').val();
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr);
             $.ajax({
@@ -34,7 +34,7 @@
                         window.location.reload();
                     } else {
                         alert(arg.message);
-                        $('#e_detail').text(arg.forme.detail);
+                        $('#e_supply_detail').text(arg.forme.supply_detail);
                     }
                 }
             })
