--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab-con.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab-con.html
@@ -5,6 +5,8 @@
     {% if PAGE_TITLE == '风控落实' %}
         <div role="tabpanel" class="tab-pane" id="provide-article"><!--项目情况-->
             {% include 'dbms/provide/agree/scan/tab/provide-article.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree"><!--合同-->
+                {% include 'dbms/agree/scan/tab/agree-counters.html' %}</div>
     {% endif %}
 {% endif %}
 
