--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab-tit.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab-tit.html
@@ -7,6 +7,9 @@
         <li role="presentation">
             <a href="#provide-article" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">项目情况</a></li>
+         <li role="presentation">
+            <a href="#agree" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">合同</a></li>
     {% endif %}
 {% endif %}
 
