--- a/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
+++ b/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
@@ -54,18 +54,16 @@
     <p>2、担保物价值减少，乙方应在三十日内向甲方提供甲方认可的、与该担保物减少的价值额相当的其他担保。</p>
     <p>（三）由第三方为乙方向甲方提供信用反担保的，应签署相关反担保合同。</p>
     <p>九、由第三人为乙方向甲方提供财产进行反担保的，本协议第八条所列之条款由乙方和第三人承担履行责任。</p>
-    <p>十、分离式保函有效期届满或保证义务履行完毕，乙方应将保函正本收回并退还甲方；若保函正本不能退回的，乙方应提供受益人出具的保函失效的书面文件或保证义务完结的证明文件。</p>
-    <p>分离式保函有效期届满，若乙方未能履行上述义务的，应向甲方支付逾期保费。逾期保费从保函有效期届满之日起算，到保函正本退回或受益人出具保函失效的书面文件、保证义务完结的证明文件收到之日截止，按本合同第六条（一）款规定的担保费率计算收取。</p>
-    <p>十一、合同的变更和解除</p>
+    <p>十、合同的变更和解除</p>
     <p>（一）本合同生效后，甲乙任何一方不得擅自变更和解除本合同。</p>
     <p>（二）甲乙任何一方发生合并、分立、承包及股份制改造等转制变更时，由变更后法人承担或连带承担履行本合同的义务，享有应有的权利。</p>
-    <p>十二、甲乙双方同意约定的其他事项：</p>
+    <p>十一、甲乙双方同意约定的其他事项：</p>
     <p> <u>{{ other }}</u>。</p>
-    <p>十三、因本协议发生的争议或一方不履约，经协商不能达成一致意见，应向甲方所在地人民法院提起诉讼。如甲方代乙方履行清偿义务，甲方向乙方行使追偿权的期限为自甲方履行代偿之日起至甲方对乙方追偿权诉求时效期届满之日止。</p>
+    <p>十二、因本协议发生的争议或一方不履约，经协商不能达成一致意见，应向甲方所在地人民法院提起诉讼。如甲方代乙方履行清偿义务，甲方向乙方行使追偿权的期限为自甲方履行代偿之日起至甲方对乙方追偿权诉求时效期届满之日止。</p>
     <p>乙方应提供其送达地址：<strong><u>（收件人：{{ agree_obj.lending.summary.custom.linkman }}，联系电话：{{ agree_obj.lending.summary.custom.contact_num }}，送达地址：{{ agree_obj.lending.summary.custom.contact_addr }}）</u></strong>用于接收人民法院的法律文书，并保证送达地址正确有效的。收件人、送达地址和联系电话发生变更的，应于变更后三日内书面通知甲方。因送达信息不准确、变更后未及时告知，或其指定的收件人拒绝签收，导致法律文书未能实际接收的，法律文书退回之日视为有效送达之日。乙方自愿接受上述约定并承担由此可能产生的不利法律后果，并保证所提供的送达地址各项内容是准确和有效的。</p>
-    <p>十四、因本协议发生的争议，经协商不能达成一致意见，应向甲方所在地人民法院提起诉讼。</p>
-    <p>十五、本协议经甲乙双方盖章或签字即生效。本合同一式二份，甲乙双方各执一份，其法律效力相同。</p>
-    <p>十六、本合同各方同意并不可撤销地授权{{ UN }}将各方的名称、注册地址等信息、及各方在本合同项下业务活动和履约活动中形成的交易记录、信用信息、以及不良信息（包括未按照本合同履行义务的信息、人民法院判决或者裁定本机构履行义务以及强制执行的信息以及法律、法规规定的其他不良信息），报送给中国人民银行征信系统和其他依法设立的信用信息数据库，并允许相关信息被合法查询。成都武侯中小企业融资担保有限责任公司也有权为本合同订立和履行之目的，通过中国人民银行征信系统和其他依法设立的信用信息数据库查询各方的相关信息。</p>
+    <p>十三、因本协议发生的争议，经协商不能达成一致意见，应向甲方所在地人民法院提起诉讼。</p>
+    <p>十四、本协议经甲乙双方盖章或签字即生效。本合同一式二份，甲乙双方各执一份，其法律效力相同。</p>
+    <p>十五、本合同各方同意并不可撤销地授权{{ UN }}将各方的名称、注册地址等信息、及各方在本合同项下业务活动和履约活动中形成的交易记录、信用信息、以及不良信息（包括未按照本合同履行义务的信息、人民法院判决或者裁定本机构履行义务以及强制执行的信息以及法律、法规规定的其他不良信息），报送给中国人民银行征信系统和其他依法设立的信用信息数据库，并允许相关信息被合法查询。成都武侯中小企业融资担保有限责任公司也有权为本合同订立和履行之目的，通过中国人民银行征信系统和其他依法设立的信用信息数据库查询各方的相关信息。</p>
 </div>
 
 <div class="split">
