--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/supply-edit.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/supply-edit.html
@@ -1,11 +1,11 @@
 <div id="form_supply">
 
     <div class="form-group"><!--补调问题-->
-        <label for="id_edit_detail" class="col-sm-3 control-label">{{ form_supply.detail.label }}：</label>
+        <label for="id_edit_detail" class="col-sm-3 control-label">{{ form_supply.supply_detail.label }}：</label>
         <div class="col-sm-9">
-            <textarea name="detail" cols="40" id="id_edit_detail" required="" placeholder="补调问题" rows="5" class="form-control"></textarea>
+            <textarea name="supply_detail" cols="40" id="id_edit_detail" required="" placeholder="补调问题" rows="5" class="form-control"></textarea>
         </div>
-        <label id="e_edit_detail" class="pull-right">{{ form_supply.detail.errors }}</label>
+        <label id="e_edit_detail" class="pull-right">{{ form_supply.supply_detail.errors }}</label>
     </div>
 
 </div>
