增加最新追偿台账列表

--- a/A_dbms/templates/dbms/agree/agree_board/blank-space.html
+++ b/A_dbms/templates/dbms/agree/agree_board/blank-space.html
@@ -1,1 +1,1 @@
-<p><u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp此栏空白&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u></p>
+<p> <strong><u>{% if agree_other %}{{ other }}{% else %}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{% endif %}</u>。</strong></p>
