--- a/A_dbms/templates/dbms/agree/agree_board/entrust-single-l.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-single-l.html
@@ -70,7 +70,7 @@
     <p>6.8本合同项下的反担保发生不利于甲方的变化时，乙方应及时提供甲方认可的其他反担保。</p>
     <p>本款所称“变化”包括但不限于：反担保人停产、歇业、解散、停业整顿、被撤销或营业执照被吊销、申请或被申请破产；反担保人的经营或财务状况有重大变化；反担保人涉及重大诉讼或仲裁案件；反担保物的价值减少或可能减少；反担保人在反担保合同项下有违约行为；反担保人与乙方发生争议；反担保人要求解除反担保合同；担保合同未生效或无效或被撤销；担保物权不成立或无效；或影响担保人债权安全的其他事件等。</p>
     <p><strong>第七条 其他约定事项</strong></p>
-    <p> ____________________________________________________________________</p>
+    <div>{% include 'dbms/agree/agree_board/blank-space.html' %}</div>
     <p><strong>第八条补充保证金</strong></p>
     <p>出现下列情形时，甲方有权要求乙方补充提供保证金，直至保证金金额达到本合同项下保函的最大担保金额：</p>
     <p>（1）乙方在第四条项下所作陈述与保证不真实；</p>
