--- a/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
+++ b/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
@@ -58,7 +58,7 @@
     <p>（一）本合同生效后，甲乙任何一方不得擅自变更和解除本合同。</p>
     <p>（二）甲乙任何一方发生合并、分立、承包及股份制改造等转制变更时，由变更后法人承担或连带承担履行本合同的义务，享有应有的权利。</p>
     <p>十一、甲乙双方同意约定的其他事项：</p>
-    <p> <u>{{ other }}</u>。</p>
+    <div>{% include 'dbms/agree/agree_board/blank-space.html' %}</div>
     <p>十二、因本协议发生的争议或一方不履约，经协商不能达成一致意见，应向甲方所在地人民法院提起诉讼。如甲方代乙方履行清偿义务，甲方向乙方行使追偿权的期限为自甲方履行代偿之日起至甲方对乙方追偿权诉求时效期届满之日止。</p>
     <p>乙方应提供其送达地址：<strong><u>（收件人：{{ agree_obj.lending.summary.custom.linkman }}，联系电话：{{ agree_obj.lending.summary.custom.contact_num }}，送达地址：{{ agree_obj.lending.summary.custom.contact_addr }}）</u></strong>用于接收人民法院的法律文书，并保证送达地址正确有效的。收件人、送达地址和联系电话发生变更的，应于变更后三日内书面通知甲方。因送达信息不准确、变更后未及时告知，或其指定的收件人拒绝签收，导致法律文书未能实际接收的，法律文书退回之日视为有效送达之日。乙方自愿接受上述约定并承担由此可能产生的不利法律后果，并保证所提供的送达地址各项内容是准确和有效的。</p>
     <p>十三、因本协议发生的争议，经协商不能达成一致意见，应向甲方所在地人民法院提起诉讼。</p>
