--- a/A_dbms/templates/dbms/dun/dun/dun-filter.html
+++ b/A_dbms/templates/dbms/dun/dun/dun-filter.html
@@ -26,6 +26,8 @@
     <label>
         追偿总额：{{ dun_amount }}，回款总额：{{ dun_retrieve_sun }}<!--，费用总额：{{ dun_charge_sun }}-->
     </label>
+    <label class="pull-right"><a class="btn btn-primary btn-sm " target="_blank" id="newestLedgerB"
+       href="{% url 'dbms:dun_ledge_all' %}">最新台账</a></label>
     <label class="pull-right"><a class="btn btn-primary btn-sm" id="addDunB">新建追偿</a></label>
 
 </div>
