--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -21,6 +21,9 @@
         {% include 'dbms/appraisal/modl/lending-del-mod.html' %}
         {% include 'dbms/appraisal/modl/article-sign-mod.html' %}
         {% include 'dbms/appraisal/modl/article-change-mod.html' %}
+
+        {% include 'dbms/appraisal/modl/co-borrowerd-add-mod.html' %}
+
         {% include 'dbms/review/modl/investigate-add-mod.html' %}
         {% include 'dbms/review/modl/investigate-del-mod.html' %}
 
@@ -44,6 +47,12 @@
     {% include 'dbms/appraisal/extra/js-lending-del.html' %}
     {% include 'dbms/appraisal/extra/js-article-sign.html' %}
     {% include 'dbms/appraisal/extra/js-article-change.html' %}
+
+    {% include 'dbms/appraisal/extra/js-co-borrowerd.html' %}
+
+
     {% include 'dbms/review/extra/js-investigate-add.html' %}
     {% include 'dbms/review/extra/js-investigate-del.html' %}
+
+    {% include 'dbms/js/js-search-custom.html' %}
 {% endblock %}
