--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -7,6 +7,9 @@
                 {% if 'article_feedback_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="feedbackArticle">反馈</a><!--#path('article/del/'-->
                 {% endif %}
+
+                <a class="btn btn-primary btn-sm " id="addCoBorrowerB">添加共借</a><!--#path('article/del/'-->
+
                 {% if 'article_edit_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="editArticle">修改</a><!--#path('article/del/'-->
                 {% endif %}
