--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/co-borrowerd-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/co-borrowerd-add.html
@@ -1,5 +1,4 @@
-<div id="form_spouse_add">
-
+<div id="form_borrower_add">
 
     <div class="form-group" id="custom_search"><!--搜索框-->
         <label>
@@ -14,13 +13,13 @@
     </div>
 
     <div class="form-group"><!--产权人-->
-        <label for="id_custom" class="col-sm-3 control-label">{{ form_spouse_add.spouses.label }}：</label>
+        <label for="id_custom" class="col-sm-3 control-label">{{ form_borrower_add.borrower.label }}：</label>
         <div class="col-sm-9">
-            <select name="spouses" id="id_custom" required="" class="form-control">
+            <select name="borrower" id="id_custom" required="" class="form-control">
                 <option value="" selected="">---------</option>
             </select>
         </div>
-        <label id="e_custom" class="pull-right">{{ form_spouse_add.spouses.errors }}</label>
+        <label id="e_borrower" class="pull-right">{{ form_borrower_add.borrower.errors }}</label>
     </div>
 
     <!--
