--- a/A_dbms/templates/dbms/article/scan/article-tab.html
+++ b/A_dbms/templates/dbms/article/scan/article-tab.html
@@ -1,53 +1,98 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation">
-            <a href="#feedback" style="background-color: #f5f5f5"
-               aria-controls="profile" role="tab" data-toggle="tab">反馈结论</a></li>
-        <li role="presentation">
-            <a href="#meeting" style="background-color: #f5f5f5"
-               aria-controls="profile" role="tab" data-toggle="tab">评审会</a></li>
-        <li role="presentation">
-            <a href="#comment" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">评委意见</a></li>
-        <li role="presentation">
-            <a href="#supply" style="background-color: #f5f5f5"
-               aria-controls="profile" role="tab" data-toggle="tab">补调问题</a></li>
-        <li role="presentation">
-            <a href="#single" style="background-color: #f5f5f5"
-               aria-controls="settings" role="tab" data-toggle="tab">单项额度</a></li>
+        {% if article_obj.borrower.all %}
+            <li role="presentation">
+                <a href="#brodder" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">共借人</a></li>
+        {% endif %}
+        {% if article_obj.feedback_article.all %}
+            <li role="presentation">
+                <a href="#feedback" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">反馈结论</a></li>
+        {% endif %}
+        {% if article_obj.appraisal_article.all %}
+            <li role="presentation">
+                <a href="#meeting" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">评审会</a></li>
+        {% endif %}
+        {% if article_obj.comment_summary.all %}
+            <li role="presentation">
+                <a href="#comment" style="background-color: #f5f5f5"
+                   aria-controls="messages" role="tab" data-toggle="tab">评委意见</a></li>
+        {% endif %}
+        {% if article_obj.supply_summary.all %}
+            <li role="presentation">
+                <a href="#supply" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">补调问题</a></li>
+        {% endif %}
+        {% if article_obj.single_quota_summary.all %}
+            <li role="presentation">
+                <a href="#single" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">单项额度</a></li>
+        {% endif %}
+
         <li role="presentation" class="active">
             <a href="#lenging" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">放款次序</a></li>
-        <li role="presentation">
-            <a href="#sign" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">签批情况</a></li>
-        <li role="presentation">
-            <a href="#article-change" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">变更情况</a></li>
-        <li role="presentation">
-            <a href="#investigate" style="background-color: #f5f5f5"
-               aria-controls="settings" role="tab" data-toggle="tab">补调</a></li>
+
+        {% if article_obj.sign_type %}
+            <li role="presentation">
+                <a href="#sign" style="background-color: #f5f5f5"
+                   aria-controls="messages" role="tab" data-toggle="tab">签批情况</a></li>
+        {% endif %}
+        {% if article_obj.change_article.all %}
+            <li role="presentation">
+                <a href="#article-change" style="background-color: #f5f5f5"
+                   aria-controls="messages" role="tab" data-toggle="tab">变更情况</a></li>
+        {% endif %}
+        {% if article_obj.custom.inv_custom.all %}
+            <li role="presentation">
+                <a href="#investigate" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">补调</a></li>
+        {% endif %}
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane" id="feedback"> <!--反馈结论-->
-            {% include 'dbms/article/scan/tab/feedback.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="meeting"> <!--评审会-->
-            {% include 'dbms/article/scan/tab/meeting.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="comment"> <!--评审意见-->
-            {% include 'dbms/appraisal/scan/tab/comment.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="supply"><!--补调问题-->
-            {% include 'dbms/appraisal/scan/tab/supply.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="single"> <!--单项额度-->
-            {% include 'dbms/appraisal/scan/tab/single.html' %} </div>
+        {% if article_obj.borrower.all %}
+            <div role="tabpanel" class="tab-pane" id="brodder"> <!--共借人-->
+                {% include 'dbms/article/scan/tab/borrower.html' %} </div>
+        {% endif %}
+        {% if article_obj.feedback_article.all %}
+            <div role="tabpanel" class="tab-pane" id="feedback"> <!--反馈结论-->
+                {% include 'dbms/article/scan/tab/feedback.html' %} </div>
+        {% endif %}
+        {% if article_obj.appraisal_article.all %}
+            <div role="tabpanel" class="tab-pane" id="meeting"> <!--评审会-->
+                {% include 'dbms/article/scan/tab/meeting.html' %} </div>
+        {% endif %}
+        {% if article_obj.comment_summary.all %}
+            <div role="tabpanel" class="tab-pane" id="comment"> <!--评审意见-->
+                {% include 'dbms/appraisal/scan/tab/comment.html' %} </div>
+        {% endif %}
+        {% if article_obj.supply_summary.all %}
+            <div role="tabpanel" class="tab-pane" id="supply"><!--补调问题-->
+                {% include 'dbms/appraisal/scan/tab/supply.html' %} </div>
+        {% endif %}
+        {% if article_obj.single_quota_summary.all %}
+            <div role="tabpanel" class="tab-pane" id="single"> <!--单项额度-->
+                {% include 'dbms/appraisal/scan/tab/single.html' %} </div>
+        {% endif %}
+
         <div role="tabpanel" class="tab-pane active" id="lenging"> <!--放款次序-->
             {% include 'dbms/appraisal/scan/tab/lending_order.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="sign"> <!--签批情况-->
-            {% include 'dbms/appraisal/scan/tab/sign.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="article-change"><!--项目变更-->
-            {% include 'dbms/appraisal/scan/tab/article-change.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="investigate"> <!--补调-->
-            {% include 'dbms/review/scan/tab/investigate.html' %}</div>
+
+        {% if article_obj.sign_type %}
+            <div role="tabpanel" class="tab-pane" id="sign"> <!--签批情况-->
+                {% include 'dbms/appraisal/scan/tab/sign.html' %} </div>
+        {% endif %}
+        {% if article_obj.change_article.all %}
+            <div role="tabpanel" class="tab-pane" id="article-change"><!--项目变更-->
+                {% include 'dbms/appraisal/scan/tab/article-change.html' %} </div>
+        {% endif %}
+        {% if article_obj.custom.inv_custom.all %}
+            <div role="tabpanel" class="tab-pane" id="investigate"> <!--补调-->
+                {% include 'dbms/review/scan/tab/investigate.html' %}</div>
+        {% endif %}
     </div>
 </div>
