--- a/A_dbms/templates/dbms/agree/agree_board/entrust/home-page.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/home-page.html
@@ -8,9 +8,11 @@
     </div>
     <div class="page-home-y">
         <p class="str-p page-home-p">
-            <strong>{{ page_home_y_y }}：{{ agree_obj.lending.summary.custom.name }}</strong></p>
-        <p class="page-home-p">住所（地址）：{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</p>
-        <p class="page-home-p">法定代表人：{{ agree_obj.lending.summary.custom.company_custome.representative }}</p>
+            <strong>{{ page_home_y_y }}：{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}、{% for borrower in agree_obj.lending.summary.borrower.all %}{{ borrower.name }}{% if not forloop.last %}、{% endif %}{% endfor %}{% endif %}</strong></p>
+        {% if agree_obj.lending.summary.custom.genre == 1 %}
+            <p class="page-home-p">住所（地址）：{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</p>
+            <p class="page-home-p">法定代表人：{{ agree_obj.lending.summary.custom.company_custome.representative }}</p>
+        {% endif %}
     </div>
     {% if agree_typ == 21 or agree_typ == 22 %}
         <p style="text-indent: 26pt;padding-top: 65pt"><strong>声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。乙方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。</strong>
