--- a/A_dbms/templates/dbms/agree/agree_board/blank-space.html
+++ b/A_dbms/templates/dbms/agree/agree_board/blank-space.html
@@ -1,1 +1,1 @@
-<p> <strong><u>{% if agree_other %}{{ other }}{% else %}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{% endif %}</u>。</strong></p>
+<p> <strong><u>{% if agree_obj.other %}{{ agree_obj.other }}{% else %}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{% endif %}</u>。</strong></p>
