--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/16-notify-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/16-notify-1.html
@@ -92,6 +92,13 @@
     <p>地址：<strong><u>{{ agree_obj.lending.summary.custom.contact_addr }}</u></strong></p>
     <p>电话：<strong><u>{{ agree_obj.lending.summary.custom.contact_num }}</u></strong></p>
     <p>收件人：<strong><u>{{ agree_obj.lending.summary.custom.linkman }}</u></strong></p>
+    {% if agree_obj.lending.summary.borrower.all %}
+        {% for borrower in agree_obj.lending.summary.borrower.all %}
+            <p>地址：<strong><u>{{ borrower.contact_addr }}</u></strong></p>
+            <p>电话：<strong><u>{{ borrower.contact_num }}</u></strong></p>
+            <p>收件人：<strong><u>{{ borrower.linkman }}</u></strong></p>
+        {% endfor %}
+    {% endif %}
 </div>
 <p>（二）甲乙丙三方确认上述送达地址适用范围包括非诉时各类通知、协议等文件以及就合同发生纠纷时相关文件和法律文书的送达，同时包括在争议进入仲裁、民事诉讼程序后的一审、二审、再审和执行程序。</p>
 <p>（三）三方的送达地址需要变更时应向对方履行书面的通知义务；仲裁及民事诉讼阶段当事人地址变更时应当向仲裁机构、人民法院履行送达地址变更通知义务。未履行以上通知义务的，三方确认的送达地址仍视为有效送达地址。</p>
