--- a/A_dbms/templates/dbms/agree/agree_board/loan-single-p.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan-single-p.html
@@ -6,23 +6,25 @@
 </div>
 <div class="split">
     <div class="agree-tit"><strong>{{ agree_obj.get_agree_name_display }}</strong></div>
-    <div>
-        <p>借 款 人：<u>{{  agree_obj.lending.summary.custom.name }}</u> </p>
-        <p>法定代表人（负责人）：<u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u> </p>
-        <p>住所：<u>{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</u> </p>
+    <div style="padding-bottom: 15pt">
+        <p>借 款 人：<u>{{ agree_obj.lending.summary.custom.name }}</u> </p>
+        {% if agree_obj.lending.summary.custom.genre == 2 %}
+            <p>证件种类：<u>身份证</u>，证件号码：<u>{{  agree_obj.lending.summary.custom.person_custome.license_num }}</u> </p>
+        {% endif %}
+        {% if agree_obj.lending.summary.custom.genre == 1 %}
+            <p>法定代表人（负责人）：<u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u> </p>
+            <p>住所：<u>{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</u> </p>
+        {% endif %}
     </div>
-    <div>
+    <div style="padding-bottom: 15pt">
         <p>贷 款 人：<u>成都武侯武兴小额贷款有限责任公司</u></p>
         <p>法定代表人（负责人）：<u>黄一平</u></p>
         <p>住所：<u>成都市武侯区武科西五路360号西部智谷B区2栋3单元10楼</u></p>
-        <p>通讯地址：<u>成都市武侯区武科西五路360号西部智谷B区2栋3单元10楼</u></p>
-        <p>邮政编码：<u>610041</u></p>
-        <p>电    话：<u>028-85566171</u>            传真：<u>/</u></p>
     </div>
     <p>鉴于借款人向贷款人申请贷款，为明确双方权利义务，借款人与贷款人经协商一致，特订立本合同。</p>
     <p><strong>第一条  贷款金额、贷款期限与贷款用途</strong></p>
     <p>1.1贷款金额：本合同项下的贷款金额为人民币（大写）<u>{{ agree_amount_cn }}</u>（RMB<u>{{ agree_amount }}</u>元）。</p>
-    <p>1.2贷款期限：贷款期限为<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>个月零<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>天，自{% include 'dbms/agree/agree_board/date-period.html' %}始至{% include 'dbms/agree/agree_board/date-period.html' %}止。《借款凭证》是贷款人向借款人实际提供资金的最终证明，是本合同的组成部分，与本合同具有同等法律效力。若《借款凭证》记载的贷款起始日期、到期日期与本合同约定的贷款起始日期、到期日期不一致的，以《借款凭证》的记载为准。</p>
+    <p>1.2贷款期限：贷款期限为<u>{{ agree_term_cn }}</u>个月零<u>&nbsp/&nbsp</u>天，自{% include 'dbms/agree/agree_board/date-period.html' %}始至{% include 'dbms/agree/agree_board/date-period.html' %}止。《借款凭证》是贷款人向借款人实际提供资金的最终证明，是本合同的组成部分，与本合同具有同等法律效力。若《借款凭证》记载的贷款起始日期、到期日期与本合同约定的贷款起始日期、到期日期不一致的，以《借款凭证》的记载为准。</p>
     <p>1.3贷款用途为：<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。未经贷款人书面同意，借款人不得以任何理由将贷款挪作他用。</p>
     <p>1.4 <strong>本合同一经签署，在贷款发放之前，借款人若欲取消本合同项下部分或全部贷款，应书面通知贷款人并取得贷款人的书面同意；取消贷款受理期间为距离取消贷款日不少于七个贷款人营业日前。</strong></p>
     <p><strong>第二条  贷款利率、计息期间</strong></p>
