--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a style="color: white" class="navbar-brand" href="{% url 'dbms:index' %}">
-                    {% block pro_name %}成都武侯中小企业融资担保有限责任公司{% endblock %}
+                    {% block pro_name %}成都武侯武兴小额贷款有限责任公司{% endblock %}
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
