删除企业型客户的行业与区域字段，反担保措施增加备注字段

--- a/A_dbms/templates/dbms/appraisal/appraisal-sign-x.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-sign-x.html
@@ -1,11 +1,9 @@
 <div class="headline-t">
     <p class="headline-1"><b>{{ UN }}</b></p>
     {% if new > 0 %}
-        <p class="headline-2-r"><b>{% if article_obj.appraisal_article.all.0.review_model == 1 %}内部{% else %}
-            外部{% endif %}审查意见书审核签批单</b></p>
+        <p class="headline-2-r"><b>项目审查意见书审核签批单</b></p>
     {% else %}
-        <p class="headline-2-d"><b>{% if article_obj.appraisal_article.all.0.review_model == 1 %}内部{% else %}
-            外部{% endif %}审查意见书审核签批单</b></p>
+        <p class="headline-2-d"><b>项目审查意见书审核签批单</b></p>
     {% endif %}
 </div>
 <div class="notice-body">
@@ -15,12 +13,18 @@
             <tr class="bb2">
                 <td style="padding-top: 6pt" width="67pt" valign="top"><b>主题：</b></td>
                 <td class="tbp" style="padding-top: 6pt; padding-bottom: 6pt">
-                    关于{{ article_obj.custom.name }}{{ amount_str }}万元担保项目的评审意见（审查意见书：{{ article_obj.summary_num }}）
+                    关于{{ article_obj.custom.name }}{{ amount_str }}万元贷款项目的评审意见（审查意见书：{{ article_obj.summary_num }}）
                 </td>
             </tr>
             <tr class="bb2">
-                <td colspan="2" height="500" valign="top">董事长意见：
-                    <br><br><br><br><br><br><br><br>
+                <td colspan="2" height="250" valign="top">总经理意见：
+                    <br><br><br><br>
+                    <span style="padding-left: 350pt">签字：</span><br>
+                    <span style="padding-left: 350pt">时间：</span></td>
+            </tr>
+            <tr class="bb2">
+                <td colspan="2" height="250" valign="top">董事长意见：
+                    <br><br><br><br>
                     <span style="padding-left: 350pt">签字：</span><br>
                     <span style="padding-left: 350pt">时间：</span></td>
             </tr>
