--- a/A_dbms/templates/dbms/custom/scan/custom-summry-c.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-c.html
@@ -3,10 +3,10 @@
         客户名称：{{ custom_obj.short_name }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        所属行业：{{ custom_obj.company_custome.idustry }}
+        所属行业：{{ custom_obj.idustry }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        所属区域：{{ custom_obj.company_custome.district }}
+        所属区域：{{ custom_obj.district }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         客户类型：{{ custom_obj.get_genre_display }}
