--- a/A_dbms/templates/dbms/appraisal/summary/guarantee-th.html
+++ b/A_dbms/templates/dbms/appraisal/summary/guarantee-th.html
@@ -6,9 +6,9 @@
     <td></td>
 </tr>
 <tr class="otr">{#审保会次数#}
-    <td class="bb" width="100pt">审保会次数</td>
+    <td class="bb" width="100pt">{{ TH_I }}次数</td>
     <td class="bb" colspan="4">
-        {{ review_year }}年度第{{ review_order_cn }}次审保会（{{ article_obj.appraisal_article.all.0.get_review_model_display }}）
+        {{ review_year }}年度第{{ review_order_cn }}次{{ TH_I }}{% if not product_name in PROCESS_LIST_XD %}（{{ article_obj.appraisal_article.all.0.get_review_model_display }}）{% endif %}
     </td>
 </tr>
 <tr class="otr">{#上会日期#}
