--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
     <meta name="author" content="">
     {#<link rel="icon" href="http://v3.bootcss.com/favicon.ico">#}
     <title>
-{#        {% block title %}武侯担保{% endblock %}#}
-        {% block title %}武兴小贷{% endblock %}
+        {% block title %}武侯担保{% endblock %}
+{#        {% block title %}武兴小贷{% endblock %}#}
     </title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
